<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lightgreen"
    tools:context=".ModalActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/title_notes"
        android:textAlignment="center"
        android:textColor="#F9F2F2"
        android:textColorHint="#F9F2F2"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/edtFileName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtFileName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/filename_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textColor="#F9F2F2"
        android:textColorHint="#F9F2F2"
        app:layout_constraintBottom_toTopOf="@+id/edtNoteText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/edtNoteText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/notes_hint"
        android:importantForAutofill="no"
        android:inputType="textLongMessage|textMultiLine"
        android:lines="5"
        android:singleLine="false"
        android:textAlignment="viewStart"
        android:textColor="#F9F2F2"
        android:textColorHint="#F9F2F2"
        app:layout_constraintBottom_toTopOf="@+id/btnRead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtFileName"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom2"
        android:backgroundTint="#F9F2F2"
        android:text="@string/text_read"
        android:textAlignment="center"
        android:textColor="#629460"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnWrite"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNoteText" />

    <Button
        android:id="@+id/btnWrite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/custom2"
        android:backgroundTint="#F9F2F2"
        android:text="@string/text_save"
        android:textAlignment="center"
        android:textColor="#629460"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnRead"
        app:layout_constraintEnd_toEndOf="@id/btnDelete"
        app:layout_constraintStart_toEndOf="@+id/btnRead" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom2"
        android:backgroundTint="#F9F2F2"
        android:text="@string/text_delete"
        android:textAlignment="center"
        android:textColor="#629460"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnWrite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnWrite" />

</androidx.constraintlayout.widget.ConstraintLayout>
