<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/darkgreen">

        <ImageView
            android:id="@+id/WallLight"
            android:layout_width="0dp"
            android:layout_height="525dp"
            android:contentDescription="@string/topcorner"
            android:src="@drawable/loginlight"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/logoMaChi"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/logomachi"
            android:src="@drawable/machi_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/TextView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/edit_profile"
            android:textAllCaps="true"
            android:textColor="#F9F2F2"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/logoMaChi"
            app:layout_constraintStart_toStartOf="@+id/logoMaChi"
            app:layout_constraintTop_toBottomOf="@+id/logoMaChi" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="25dp"
            android:contentDescription="@string/whitewall"
            android:src="@drawable/wallpaperwhitecream"
            app:layout_constraintBottom_toBottomOf="@+id/WallLight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/WallLight"
            tools:ignore="ImageContrastCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="25dp"
            app:boxBackgroundColor="#F9F2F2"
            app:startIconDrawable="@drawable/person"
            app:layout_constraintEnd_toEndOf="@+id/imageView6"
            app:layout_constraintStart_toStartOf="@+id/imageView6"
            app:layout_constraintTop_toTopOf="@+id/imageView6">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/UsernameEditProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Username"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:boxBackgroundColor="#F9F2F2"
            app:startIconDrawable="@drawable/mail"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EmailEditProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:boxBackgroundColor="#F9F2F2"
            app:startIconDrawable="@drawable/lock"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/PasswordEditProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="New Password"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/SaveEditProfile"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/custom2"
            android:text="@string/save_change"
            android:textColor="#F9F2F2"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

        <Button
            android:id="@+id/logoutprofile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom3"
            android:text="@string/logout"
            android:textColor="#034E31"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
            app:layout_constraintEnd_toEndOf="@+id/SaveEditProfile"
            app:layout_constraintStart_toStartOf="@+id/SaveEditProfile"
            app:layout_constraintTop_toBottomOf="@+id/SaveEditProfile" />

        <TextView
            android:id="@+id/idUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="ID USER"
            android:textColor="#F9F2F2"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/WallLight"
            app:layout_constraintEnd_toEndOf="@+id/TextView17"
            app:layout_constraintStart_toStartOf="@+id/TextView17"
            app:layout_constraintTop_toBottomOf="@+id/TextView17" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>